Use "runtime" instead of "container"

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -67,7 +67,7 @@
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Container <span class="text-muted">4.2.1</span></h3>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.1</span></h3>
               <div class="mb-1 text-muted">August 21, 2018</div>
               <p class="card-text mb-auto">
                 Binary Distribution :
@@ -147,7 +147,7 @@
 
     <main role="main">
 
-      <!-- Karaf Container
+      <!-- Karaf Runtime
       ================================================== -->
       <div id="karaf" class="pb-5"></div>
 
@@ -155,7 +155,7 @@
 
         <div class="row mb-5 mt-5">
             <div class="col">
-              <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-flask"></i> Karaf Container</h2>
+              <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-flask"></i> Karaf Runtime</h2>
 
               <div class="pb-4 mb-3">
                 <h3 class="text-dark">Schedule</h3>
@@ -252,7 +252,7 @@
                       <div class="card flex-md-row mb-4 box-shadow h-md-250">
                         <div class="card-body d-flex flex-column align-items-start">
                           <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-                          <h3 class="mb-0 text-dark">Karaf Container <span class="text-muted">4.1.6</span></h3>
+                          <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.1.6</span></h3>
                           <div class="mb-1 text-muted">August 6, 2018</div>
                           <p class="card-text mb-auto">
                             Binary Distribution :
@@ -289,11 +289,11 @@
               <div class="pb-4 mb-3">
                 <h3 class="text-dark" id="cellar-installation">Installation</h3>
 
-                Apache Karaf Cellar is a complete clustering solution for Apache Karaf Container.
+                Apache Karaf Cellar is a complete clustering solution for Apache Karaf.
                 <br/>
-                Cellar can be directly installed on running Karaf Container instances. Take a look on the <a href="documentation.html">Karaf Cellar documentation</a> for details.<br/><br/>
+                Cellar can be directly installed on running Karaf Runtime instances. Take a look on the <a href="documentation.html">Karaf Cellar documentation</a> for details.<br/><br/>
 
-                <h5>On Karaf Container 4.x (Cellar 4.x)</h5>
+                <h5>On Karaf Runtime 4.x (Cellar 4.x)</h5>
                 <div  class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add cellar<br>
@@ -301,7 +301,7 @@
                     </samp>
                 </div>
 
-                <h5>On Karaf Container 3.x (Cellar 3.x)</h5>
+                <h5>On Karaf Runtime 3.x (Cellar 3.x)</h5>
                 <div  class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add cellar 3.x<br>
@@ -309,7 +309,7 @@
                     </samp>
                 </div>
 
-                <h5>On Karaf Container 2.x (Cellar 2.x)</h5>
+                <h5>On Karaf Runtime 2.x (Cellar 2.x)</h5>
                 <div  class="alert alert-dark" role="alert">
                     <samp>
                         features:chooseUrl cellar 2.x<br>
@@ -325,7 +325,7 @@
                   <thead>
                     <tr>
                         <th>Series</th>
-                        <th>Container Version Support</th>
+                        <th>Runtime Version Support</th>
                         <th>Current Status</th>
                         <th>Last Version</th>
                         <th>Next Version</th>
@@ -397,11 +397,11 @@
                 <h3 class="text-dark" id="cave-installation">Installation</h3>
 
                 <p>
-                Apache Karaf Cave is a complete artifacts repository (OSGi Repository, OBR, Maven) solution for Apache Karaf Container.
+                Apache Karaf Cave is a complete artifacts repository (OSGi Repository, OBR, Maven) solution for Apache Karaf.
                 <br/>
-                Cave can be directly installed on running Karaf Container instances. Take a look on the <a href="documentation.html">Karaf Cave documentation</a> for details.</p>
+                Cave can be directly installed on running Karaf Runtime instances. Take a look on the <a href="documentation.html">Karaf Cave documentation</a> for details.</p>
 
-                <h5>On Karaf Container 4.x (Cave 4.x)</h5>
+                <h5>On Karaf Runtime 4.x (Cave 4.x)</h5>
                 <div class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add cave<br>
@@ -409,7 +409,7 @@
                     </samp>
                 </div>
 
-                <h5>On Karaf Container 3.x (Cave 3.x)</h5>
+                <h5>On Karaf Runtime 3.x (Cave 3.x)</h5>
                 <div class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add cave 3.x<br>
@@ -417,7 +417,7 @@
                     </samp>
                 </div>
 
-                <h5>On Karaf Container 2.x (Cave 2.x)</h5>
+                <h5>On Karaf Runtime 2.x (Cave 2.x)</h5>
                 <div class="alert alert-dark" role="alert">
                     <samp>
                         features:chooseUrl cave 2.x<br>
@@ -433,7 +433,7 @@
                   <thead>
                     <tr>
                         <th>Series</th>
-                        <th>Container Version Support</th>
+                        <th>Runtime Version Support</th>
                         <th>Current Status</th>
                         <th>Last Version</th>
                         <th>Next Version</th>
@@ -489,12 +489,12 @@
                 <h3 class="text-dark" id="decanter-installation">Installation</h3>
 
                 <p>
-                Apache Karaf Decanter is a complete monitoring solution, working with any Karaf Container version.<br/>
-                Decanter is able to monitor Karaf Container itself, but also any middleware running in your ecosystem.<br/>
-                Decanter can be directly installed on any running Karaf Container instance. The following instructions are just
+                Apache Karaf Decanter is a complete monitoring solution, working with any Karaf Runtime version.<br/>
+                Decanter is able to monitor Karaf Runtime itself, but also any middleware running in your ecosystem.<br/>
+                Decanter can be directly installed on any running Karaf Runtime instance. The following instructions are just
                 example. Take a look on the <a href="documentation.html">Karaf Decanter documentation</a> for details.</p>
 
-                <h5>On Karaf Container 4.x (Decanter 2.x)</h5>
+                <h5>On Karaf Runtime 4.x (Decanter 2.x)</h5>
                 <div class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add decanter<br>
@@ -512,7 +512,7 @@
                   <thead>
                     <tr>
                         <th>Series</th>
-                        <th>Container Version Support</th>
+                        <th>Runtime Version Support</th>
                         <th>Current Status</th>
                         <th>Last Version</th>
                         <th>Next Version</th>
