--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,7 +65,7 @@
         <div class="row pt-5 pb-5">
           <div class="col pt-5 pb-5 mx-auto text-center">
             <h1 class="display-4 text-uppercase">Upgrade to the Enterprise class platform</h1>
-            <p class="lead">Karaf provides dual polymorphic container and application bootstrapping paradigms to the Enterprise.<br>
+            <p class="lead">Karaf provides dual polymorphic runtime and application bootstrapping paradigms to the Enterprise.<br>
             Focus on your business code and application, Karaf deals with the rest</p>
           </div>
         </div>
@@ -98,28 +98,28 @@
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 4.2.1 has been released! (21/8/18)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+                <p><strong>Karaf Runtime 4.2.1 has been released! (21/8/18)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 4.1.6 has been released! (6/8/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+                <p><strong>Karaf Runtime 4.1.6 has been released! (6/8/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Details</a>)</p>
+                <p><strong>Karaf Runtime 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Details</a>)</p>
+                <p><strong>Karaf Runtime 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -137,8 +137,8 @@
         <div class="row">
           <div class="col-lg-4">
             <h1><i class="fas fa-cogs"></i></h1>
-            <h3>Modern Container</h3>
-            <p>Karaf can run as a standalone container, supporting a wide range of applications and technologies.</p>
+            <h3>Modern Runtime</h3>
+            <p>Karaf can run as a standalone runtime, supporting a wide range of applications and technologies.</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <h1><i class="fas fa-cubes"></i></h1>
@@ -159,9 +159,9 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Run your applications in <span class="text-muted">Karaf Container</span></h2>
-            <p class="lead">Karaf is a lightweight, powerful, and enterprise ready container powered by OSGi. Karaf is a modern and polymorphic container.
-            By polymorphic, it means that Karaf can host any kind of applications: OSGi, Spring, WAR, and much more.</p>
+            <h2 class="featurette-heading">Run your applications in <span class="text-muted">Karaf Runtime</span></h2>
+            <p class="lead">Karaf is a lightweight, powerful, and enterprise ready application runtime. It provides all the ecosystem and bootstrapping options you need for your applications.
+            By polymorphic, it means that Karaf can host any kind of applications: WAR, OSGi, Spring, and much more.</p>
             <p>Last version <strong>4.2.1</strong> - (21/08/18)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
@@ -217,7 +217,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar.</span></h2>
-            <p class="lead">You have bunch of Karaf Container instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
+            <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
             <p>Last version <strong>4.1.0</strong> - (14/10/17)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
