--- a/src/main/webapp/projects.html
+++ b/src/main/webapp/projects.html
@@ -76,9 +76,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-primary"><i class="fas fa-flask"></i> Runtime</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Container</a>
+                <a class="text-dark">Karaf Runtime</a>
               </h3>
-              <p class="card-text mb-auto">Karaf Container is a modern and polymorphic container.</p>
+              <p class="card-text mb-auto">Karaf Runtome is a modern and polymorphic application runtime.</p>
               <p>
                 <small class="text-muted">Latest 4.2.1 <a href="download.html"><i class="fas fa-download"></i></a></small>
               </p>
@@ -137,12 +137,12 @@
         <!-- karaf-container -->
         <div class="row pb-5 border-bottom">
             <div class="col-md-12">
-              <h5 class="project-heading">Run your applications in <span class="text-muted">Karaf Container</span></h5>
+              <h5 class="project-heading">Run your applications in <span class="text-muted">Karaf Runtime</span></h5>
 
               <div class="pb-4 mb-3">
-                <p class="lead">Karaf Container is a modern and polymorphic container. It's a lightweight, powerful, and enterprise ready container powered by OSGi.
-                <br/>By polymorphic, it means that Karaf can host any kind of applications : OSGi, Spring, WAR, and much more.
-                <br/>Karaf can be use as a standalone container, or in a bootstrap way using Karaf Boot.</p>
+                <p class="lead">Karaf Runtime is a modern and polymorphic application runtime. It's a lightweight, powerful, and enterprise ready.
+                <br/>By polymorphic, it means that Karaf can host any kind of applications : WAR, Spring, OSGi, and much more.
+                <br/>Karaf can be use as a standalone immuatable runtime, or in a mutable runtime that you can manage remotely.</p>
                 <p>
                     <a class="btn btn-primary" href="download.html" role="button">Download &raquo;</a>
                     <a class="btn btn-outline-primary" href="documentation.html" role="button">Documentation &raquo;</a>
@@ -252,7 +252,7 @@
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title text-dark">WebConsole</h5>
-                      <p class="card-text">In addition of ssh and JMX, you can also manage Karaf Container using a simple browser thanks to the Karaf WebConsole.</p>
+                      <p class="card-text">In addition of ssh and JMX, you can also manage Karaf Runtime using a simple browser thanks to the Karaf WebConsole.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
                   </div>
@@ -266,7 +266,7 @@
                   <div class="card">
                     <div class="card-body text-dark">
                       <h5 class="card-title">Instances management</h5>
-                      <p class="card-text">You can manage several children instances inside the Karaf Container root instance. It's a very convenient way to test applications or configurations without impacting your existing running instances.</p>
+                      <p class="card-text">You can manage several children instances inside the Karaf Runtime root instance. It's a very convenient way to test applications or configurations without impacting your existing running instances.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
                   </div>
@@ -275,7 +275,7 @@
               <div class="card-deck w-34 mb-3">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title text-dark">Docker</h5>
+                      <h5 class="card-title text-dark">Docker & Cloud ready</h5>
                       <p class="card-text">Manage your Docker containers and images via Karaf shell console, provisionning a running instance in the simpliest way.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
@@ -290,7 +290,7 @@
               <h5 class="project-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar</span></h5>
 
               <div class="pb-4 mb-3">
-                <p class="lead">You have bunch of Karaf Container instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you.<br/>
+                <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you.<br/>
                 Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
                 <p>
                     <a class="btn btn-primary" href="download.html" role="button">Download &raquo;</a>
