--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -73,7 +73,7 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-boxes"></i> Archives</h2>
             
               <div class="pb-4 mb-3">
-                <h3 class="text-dark">Karaf Container</h3>
+                <h3 class="text-dark">Karaf Runtime</h3>
                 
                 <table class="table table-striped table-sm">
                     <thead class="thead-dark">
