--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -66,7 +66,7 @@
         <div class="col">
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
-              <strong class="d-inline-block mb-2 text-primary">Karaf Container</strong>
+              <strong class="d-inline-block mb-2 text-primary">Karaf Runtime</strong>
               <h3 class="mb-0">
                 <a class="text-dark">4.x series</a>
               </h3>
