Add Karaf Cellar releases 4.0.5 and 4.1.2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,20 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Cellar 4.1.2 has been released! (12/10/18)</strong> - This is an update patch for Apache Cellar 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
+                <p><strong>Karaf Cellar 4.0.5 has been released! (12/10/18)</strong> - This is an update patch for Apache Cellar 4.0.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Decanter 2.1.0 has been released! (12/9/18)</strong> - This is an update patch for Apache Decanter 2.x.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -106,20 +120,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.1.6 has been released! (6/8/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Runtime 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Runtime 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar.</span></h2>
             <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
-            <p>Last version <strong>4.1.0</strong> - (14/10/17)</p>
+            <p>Last version <strong>4.1.2</strong> - (12/10/18)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
