--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -584,7 +584,13 @@
         <p class="pt-2"><a class="btn btn-primary" href="documentation.html" role="button">Read Documentation &raquo;</a></p>
       </div>
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - <a href="privacy.html">Privacy Policy</a><br/>
+      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - 
+        <a href="privacy.html">Privacy Policy</a> - 
+        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> - 
+        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> - 
+        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> - 
+        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> - 
+        <a target="_blank" href="https://www.apache.org/foundation/thanks.html" title="Thanks">Thanks</a><br/>
       Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.</p>
     </footer>
 
