--- a/src/main/webapp/projects.html
+++ b/src/main/webapp/projects.html
@@ -78,7 +78,7 @@
               <h3 class="mb-0">
                 <a class="text-dark">Karaf Runtime</a>
               </h3>
-              <p class="card-text mb-auto">Karaf Runtome is a modern and polymorphic application runtime.</p>
+              <p class="card-text mb-auto">Karaf Runtime is a modern and polymorphic application runtime.</p>
               <p>
                 <small class="text-muted">Latest 4.2.1 <a href="download.html"><i class="fas fa-download"></i></a></small>
               </p>
