Add ACNA2018 slideshow

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -290,6 +290,20 @@
         <hr class="featurette-divider">
 
         <div class="row featurette">
+          <div class="col-md-5">
+            <h2 class="featurette-heading"><span class="text-muted">Apache Karaf</span> in the Enterprise.</h2>
+            <p class="lead">DevOps, Cloud, On Premise, Monitoring, Clustering... Apache Karaf is the perfect project for the companies that need performance and flexibility.</p>
+            <p class="lead">Download the latest ApacheCon slideshow to have an overview of the amazing possibilities that Apache Karaf offer to your business!</p>
+            <p><a class="btn btn-primary" href="resources/acna18-apache-karaf-in-the-enterprise.pdf" role="button">Download &raquo;</a></p>
+          </div>
+          <div class="col-md-7 order-md-1">
+            <img src="images/apache-karaf-ac-2018.png" width="600px"/>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Apache & <span class="text-muted">OpenSource.</span></h2>
             <p class="lead">
