Publish Karaf Runtime 4.1.7 release

--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -103,6 +103,19 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Runtime 4.1.7 has been released ! <span class="text-muted">November 30, 2018</span></h3>
+                <p>This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements.</p>
+                <ul>
+                  <li>Add Felix HTTP feature</li>
+                  <li>Update to Apache Felix Webconsole 4.3.8 and latest jQuery UI 1.12.1</li>
+                  <li>ProfilesUri option does not accept multiple values</li>
+                  <li>Competitive configurations between various mojos</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343797" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cellar 4.1.2 has been released ! <span class="text-muted">October 12, 2018</span></h3>
                 <p>This is a major maintenance release on Cellar 4.1.x series. Especially, it provides:</p>
                 <ul>
