--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -85,6 +85,16 @@
                         </tr>
                     </thead>
                     <tbody>
+                    <tr>
+                        <td>4.1.6</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.6/apache-karaf-4.1.6-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342748')">Release Notes</a></td>
+                    </tr>
                         <tr>
                             <td>4.2.0</td>
                             <td><a href="http://archive.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0/apache-karaf-4.2.0.tar.gz.sha512">SHA512</a>]<br>
