Add new PMC members

--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -476,8 +476,14 @@
                 <tr>
                     <td>Fran&ccedil;ois Papon</td>
                     <td>fpapon</td>
-                    <td></td>
+                    <td><img src="images/check.gif"/></td>
                     <td><a href="https://www.yupiik.com">Yupiik</a></td>
+                </tr>
+                <tr>
+                    <td>Grzegorz Grzybek</td>
+                    <td>ggrzybek</td>
+                    <td><img src="images/check.gif"/></td>
+                    <td><a href="http://www.redhat.com">RedHat</a></td>
                 </tr>
                 </tbody>
             </table>
