--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -79,9 +79,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.1</a>
+                <a class="text-dark">Karaf Runtime 4.2.2</a>
               </h3>
-              <div class="mb-1 text-muted">August 21, 2018</div>
+              <div class="mb-1 text-muted">December 18, 2018</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -101,6 +101,135 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.2 has been released ! <span class="text-muted">December 18, 2018</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add Felix HTTP feature</li>
+                  <li>Add Camel examples</li>
+                  <li>Add config management example</li>
+                  <li>Add websocket example</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>   <td><strong>easymock</strong></td>
+                      <td>4.0.1</td>
+                    </tr>
+                    <tr>   <td><strong>XBean</strong></td>
+                      <td>4.12</td>
+                    </tr>
+                    <tr>   <td><strong>maven-bundle-plugin</strong></td>
+                      <td>4.1.0</td>
+                    </tr>
+                    <tr>   <td><strong>maven-invoker-plugin</strong></td>
+                      <td>3.1.0</td>
+                    </tr>
+                    <tr>   <td><strong>maven-plugin-plugin</strong></td>
+                      <td>3.5.2</td>
+                    </tr>
+                    <tr>   <td><strong>maven-scm-publish-plugin</strong></td>
+                      <td>3.0.0</td>
+                    </tr>
+                    <tr>   <td><strong>asciidoctor-maven-plugin</strong></td>
+                      <td>1.5.6</td>
+                    </tr>
+                    <tr>   <td><strong>JNA</strong></td>
+                      <td>4.5.2</td>
+                    </tr>
+                    <tr>   <td><strong>Aries Blueprint Core</strong></td>
+                      <td>1.10.1</td>
+                    </tr>
+                    <tr>   <td><strong>Aries Blueprint CM</strong></td>
+                      <td>1.3.1</td>
+                    </tr>
+                    <tr>   <td><strong>commons-compress</strong></td>
+                      <td>1.18</td>
+                    </tr>
+                    <tr>   <td><strong>commons-lang3</strong></td>
+                      <td>3.8.1</td>
+                    </tr>
+                    <tr>   <td><strong>Felix ConfigAdmin</strong></td>
+                      <td>1.9.6</td>
+                    </tr>
+                    <tr>   <td><strong>Felix Framework Security</strong></td>
+                      <td>2.6.1</td>
+                    </tr>
+                    <tr>   <td><strong>Felix Metatype</strong></td>
+                      <td>1.2.2</td>
+                    </tr>
+                    <tr>   <td><strong>Felix SCR</strong></td>
+                      <td>2.1.8</td>
+                    </tr>
+                    <tr>   <td><strong>Felix WebConsole Plugin DS</strong></td>
+                      <td>2.1.0</td>
+                    </tr>
+                    <tr>   <td><strong>geronimo-atinject_1.0_spec</strong></td>
+                      <td>1.1</td>
+                    </tr>
+                    <tr>   <td><strong>maven-dependency-tree</strong></td>
+                      <td>3.0.1</td>
+                    </tr>
+                    <tr>   <td><strong>Maven Wagon</strong></td>
+                      <td>3.2.0</td>
+                    </tr>
+                    <tr>   <td><strong>hibernate-validator</strong></td>
+                      <td>6.0.13.Final</td>
+                    </tr>
+                    <tr>   <td><strong>Ant ServiceMix bundle</strong></td>
+                      <td>1.10.3_1</td>
+                    </tr>
+                    <tr>   <td><strong>Apache POM</strong></td>
+                      <td>21</td>
+                    </tr>
+                    <tr>   <td><strong>ASM</strong></td>
+                      <td>7.0</td>
+                    </tr>
+                    <tr>   <td><strong>Aries SpiFly</strong></td>
+                      <td>1.2</td>
+                    </tr>
+                    <tr>   <td><strong>Felix ConfigAdmin</strong></td>
+                      <td>1.9.10</td>
+                    </tr>
+                    <tr>   <td><strong>Felix SCR</strong></td>
+                      <td>2.1.14</td>
+                    </tr>
+                    <tr>   <td><strong>awaitility</strong></td>
+                      <td>3.1.3</td>
+                    </tr>
+                    <tr>   <td><strong>easymock</strong></td>
+                      <td>4.0.2</td>
+                    </tr>
+                    <tr>   <td><strong>pax-jms</strong></td>
+                      <td>1.0.2</td>
+                    </tr>
+                    <tr>   <td><strong>Spring</strong></td>
+                      <td>4.3.21.RELEASE</td>
+                    </tr>
+                    <tr>   <td><strong>Spring</strong></td>
+                      <td>5.0.10.RELEASE</td>
+                    </tr>
+                    <tr>   <td><strong>Pax Exam</strong></td>
+                      <td>4.13.1</td>
+                    </tr>
+                    <tr>   <td><strong>Pax Web</strong></td>
+                      <td>7.2.5</td>
+                    </tr>
+                    <tr>   <td><strong>Felix Utils</strong></td>
+                      <td>1.11.2</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343458" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Runtime 4.1.7 has been released ! <span class="text-muted">November 30, 2018</span></h3>
@@ -1229,12 +1358,12 @@
         <p class="pt-2"><a class="btn btn-primary" href="documentation.html" role="button">Read Documentation &raquo;</a></p>
       </div>
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - 
-        <a href="privacy.html">Privacy Policy</a> - 
-        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> - 
-        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> - 
-        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> - 
-        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> - 
+      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> -
+        <a href="privacy.html">Privacy Policy</a> -
+        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> -
+        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> -
+        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> -
+        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> -
         <a target="_blank" href="https://www.apache.org/foundation/thanks.html" title="Thanks">Thanks</a><br/>
       Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.</p>
     </footer>
