--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -184,9 +184,24 @@
                         </a></td>
                     </tr>
                     <tr>
+                        <td><strong>Camel</strong></td>
+                        <td>this example shows how to use Apache Camel in Karaf. Apache Camel is a integration framework,
+                            allowing you to integrate several systems and applications all together.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-camel-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
                         <td><strong>Shell Command</strong></td>
                         <td>creating a shell command.</td>
                         <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-command-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Configuration</strong></td>
+                        <td>this example shows how to use configuration in your application, introducing different approach.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-config-example" target="_blank">
                             <img src="images/github.png" width="24px">
                         </a></td>
                     </tr>
@@ -310,9 +325,16 @@
                         </a></td>
                     </tr>
                     <tr>
-                        <td><strong>War</strong></td>
+                        <td><strong>Websocket</strong></td>
                         <td>creating a regular war to be deployed in Apache Karaf.</td>
-                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-url-namespace-handler-example" target="_blank">
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-websocket-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>War</strong></td>
+                        <td>this example show how to register a websocket in the Karaf HTTP Service.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-war-example" target="_blank">
                             <img src="images/github.png" width="24px">
                         </a></td>
                     </tr>
@@ -547,12 +569,12 @@
         <p class="pt-2"><a class="btn btn-primary" href="documentation.html" role="button">Read Documentation &raquo;</a></p>
       </div>
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - 
-        <a href="privacy.html">Privacy Policy</a> - 
-        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> - 
-        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> - 
-        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> - 
-        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> - 
+      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> -
+        <a href="privacy.html">Privacy Policy</a> -
+        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> -
+        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> -
+        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> -
+        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> -
         <a target="_blank" href="https://www.apache.org/foundation/thanks.html" title="Thanks">Thanks</a><br/>
       Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.</p>
     </footer>
