Update CVE with clearsign

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -361,6 +361,10 @@
 								<p>CVE-2018-11787 : Unsecure access to Gogo shell in the webconsole.</p>
 								<a class="btn btn-outline-primary" href="security/cve-2018-11787.txt">Notes &raquo;</a>
 							</div>
+              <div class="pb-4 mb-3">
+                <p>CVE-2014-0219 : Apache Karaf enables a shutdown port on the loopback interface, which allows local users to cause a denial of service (shutdown) by sending a shutdown command to all listening high ports.</p>
+                <a class="btn btn-outline-primary" href="security/cve-2014-0219.txt">Notes &raquo;</a>
+              </div>
 
             </div><!-- /.blog-main -->
         </div>
