--- a/src/main/webapp/privacy.html
+++ b/src/main/webapp/privacy.html
@@ -86,9 +86,9 @@
                 We use the gathered information to help us make our site more useful to visitors and to better understand how and when our site is used. We do not track or collect personally identifiable information or associate gathered data with any personally identifying information from other sources.<br/>
                 <br/>
                 By using this website, you consent to the collection of this data in the manner and for the purpose described above.
-              </p>              
+              </p>
             </div>
-        </div>   
+        </div>
     </main>
 
     <!-- FOOTER -->
@@ -98,12 +98,12 @@
         <p class="pt-2"><a class="btn btn-primary" href="documentation.html" role="button">Read Documentation &raquo;</a></p>
       </div>
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2018 <a href="https://www.apache.org">Apache Software Foundation</a> - 
-        <a href="privacy.html">Privacy Policy</a> - 
-        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> - 
-        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> - 
-        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> - 
-        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> - 
+      <p>&copy; 2018-2019 <a href="https://www.apache.org">Apache Software Foundation</a> -
+        <a href="privacy.html">Privacy Policy</a> -
+        <a target="_blank" href="https://www.apache.org/events/current-event.html" title="Apache Events">Apache Events</a> -
+        <a target="_blank" href="https://www.apache.org/licenses/" title="Licenses">Licenses</a> -
+        <a target="_blank" href="https://www.apache.org/security/" title="Security">Security</a> -
+        <a target="_blank" href="https://www.apache.org/foundation/sponsorship.html" title="Sponsorship">Sponsorship</a> -
         <a target="_blank" href="https://www.apache.org/foundation/thanks.html" title="Thanks">Thanks</a><br/>
       Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.</p>
     </footer>
