Improved openhab description with permission from Kai Kreuzer

--- a/src/main/webapp/stories.html
+++ b/src/main/webapp/stories.html
@@ -122,8 +122,9 @@
 
         <div class="row mb-5 mt-5">
             <div class="col">
-              <h4 class="pb-3 mb-4">OpenHAB</h4>
-              <p>A vendor and technology agnostic open source automation software for your home.</p>
+              <h4 class="pb-3 mb-4"><img src="images/openhab.png" width="30"/> OpenHAB</h4>
+              <p>The openHAB project is a very popular open source home automation solution written in Java and OSGi. It is meant to run on embedded hardware like a Raspberry Pi and acts as a central hub in the local network that integrates all smart home devices in a vendor-neutral way.</p>
+              <p><i>Apache Karaf was chosen as a basis for openHAB due to its versatile feature management, which nicely supports the modular architecture of openHAB and lets users dynamically add features to their system through UIs at runtime. Additionally, the container management functionalities are unmatched for OSGi-based solutions and hugely helpful in many situations - just think of the powerful console, the remote ssh access or the flexible logging support. While openHAB is by far not using all features of Karaf, it definitely nicely benefits from it.</i> - Kai Kreuzer</p>
               <a href="https://www.openhab.org/" target="_blank">https://www.openhab.org/</a>
             </div>
         </div>
