Update Jahia and Unomi stories

--- a/src/main/webapp/stories.html
+++ b/src/main/webapp/stories.html
@@ -100,6 +100,14 @@
             <div class="col">
               <h4 class="pb-3 mb-4">Apache Unomi</h4>
               <p>Apache Unomi is a Java Open Source customer data platform, a Java server designed to manage customers, leads and visitors’ data and help personalize customers’ experiences while also offering features to respect visitor privacy rules (such as GDPR).</p>
+              <p><i>Apache Unomi was directly created using Apache Karaf as a runtime. We
+                needed a highly modular, high performance, scalable and open source
+                runtime for building this implementation. Apache Unomi has to store
+                millions of profiles and handle real-time processing of rules based on
+                events generated from visitor behavior into an ElasticSearch backend.
+                OSGi fit the bill perfectly for the technology architecture and Apache
+                Karaf come out of the box with everything we needed to have a
+                full-fledged and reliable runtime</i> - Serge Huber, Apache Unomi creator</p>
               <a href="https://unomi.incubator.apache.org/" target="_blank">https://unomi.incubator.apache.org/</a>
             </div>
         </div>
@@ -116,6 +124,14 @@
             <div class="col">
               <h4 class="pb-3 mb-4">Jahia</h4>
               <p>Jahia brings together content management, data marketing and great integrations to help you deliver the best digital experiences.</p>
+              <p><i>Jahia has used various technologies at its core and has been using
+                OSGi for its module system for quite some time now. Initially, we used
+                Apache Felix as a runtime, but quite quickly we realized we needed
+                more powerful logging, better provisioning, clustering and monitoring
+                support. Apache Karaf fit the bill perfectly and to the point where we
+                are using it as much as possible, especially since the community
+                around the project has been very helpful and addressing a lot of our
+                needs. We can therefore strongly recommend Apache Karaf as a runtime.</i> - Serge Huber, Jahia CTO</p>
               <a href="https://www.jahia.com/" target="_blank">https://www.jahia.com/</a>
             </div>
         </div>
