--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -102,6 +102,22 @@
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
+              <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Cave 4.1.2 has been released ! <span class="text-muted">January 21, 2019</span></h3>
+                <p>This is a major maintenance release on Cave 4.1.x series. Especially, it provides:</p>
+                <ul>
+                  <li>Be able to use proxy or storage in Cave Maven</li>
+                  <li>Add default Cave Deployer connections store</li>
+                  <li>Change implementation of Cave Deployer REST to mimic Cave Server</li>
+                </ul>
+                <p>and much more !</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344835" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <!-- 2018 -->
+              <h2 id="2018" class="pb-3 mb-4 font-italic border-bottom">2018</h2>
+
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.2 has been released ! <span class="text-muted">December 18, 2018</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
@@ -1335,6 +1351,7 @@
               <div class="p-3">
                 <h4 class="font-italic">Archives</h4>
                 <ol class="list-unstyled mb-0">
+                    <li><a href="#2018">2018</a></li>
                     <li><a href="#2017">2017</a></li>
                     <li><a href="#2016">2016</a></li>
                     <li><a href="#2015">2015</a></li>
