Add next ApacheCon event banner

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -320,6 +320,9 @@
           </div>
           <div class="col-md-5 align-items-center">
             <img class="featurette-image img-fluid mx-auto" src="images/apache.png" alt="Apache"><br><br><br>
+            <a href="https://www.apache.org/events/current-event.html" target="_blank">
+              <img class="featurette-image img-fluid mx-auto" src="https://svn.apache.org/repos/infra/apachecon/www.apachecon.com/images/landingpage/events/acna19.png" alt="ApacheCon" />
+            </a>
           </div>
         </div>
 
