WIP: add get-started page

--- a/src/main/webapp/projects.html
+++ b/src/main/webapp/projects.html
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="news.html">News</span></a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="get-started.html">Get started</a>
+                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="projects.html">Projects <span class="sr-only">(current)</a>
                 </li>
