--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -35,6 +35,9 @@
                   <a class="nav-link" href="news.html">News</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="get-started.html">Get started</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
